--- a/alunos.css
+++ b/alunos.css
@@ -1,10 +1,23 @@
 /* CSS */
 body {
   background: #f0694d;
-  background: linear-gradient(to right, rgb(121, 21, 21), rgb(147, 78, 168));
+  background: #111;
   color: white;
   margin: 0;
+  height: 100vh;
+  display: grid;
+  justify-content: center;
   font-family: rubik;
+}
+
+li {
+  background-color: #fff;
+  list-style: none;
+  color: #111;
+  text-align: center;
+  border-radius: 4px;
+  gap: 30px;
+  
 }
 
 .container {
@@ -24,18 +37,21 @@ h1 {
 }
 
 .filter {
-  width: 100%;
+  display: flex;
+  width: 97%;
   padding: 12px;
   font-size: 16px;
   border: 0;
-  border-radius: 10px;
+  border-radius: 4px;
 }
+
 
 .alunos {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   grid-gap: 30px;
   padding-inline-start: 0;
+  width: 100%;
 }
 
 .card {
